--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^3.13.0",
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "^9.3.0",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@stablelib/base64": "^1.0.1",
+    "@stablelib/utf8": "^1.0.1",
     "amazon-cognito-identity-js": "^5.2.10",
     "aws-amplify": "^4.3.27",
     "aws-amplify-react-native": "^6.0.5",
@@ -31,6 +34,7 @@
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
     "expo-linking": "~3.1.0",
+    "expo-random": "~12.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
@@ -42,7 +46,8 @@
     "react-native-emoji-selector": "^0.2.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
